--- a/src/components/championCard/ChampionCard.scss
+++ b/src/components/championCard/ChampionCard.scss
@@ -1,14 +1,54 @@
 .championCard {
-  width: 18%;
-  margin-bottom: 2%;
   position: relative;
+  width: 150px;
+  margin: 2em;
+  display: grid;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  transition: transform 0.4s;
 
-  &_image {
-    height: 100%;
-    width: 100%;
+  &_pic {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &_pic .first-pic {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  &_pic .hover-pic {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99;
+  }
+
+  &_name {
+    text-align: center;
+    background-color: black;
+    color: white;
+  }
+
+  & a {
+    text-decoration: none;
   }
 
   &:hover {
-    transform: scale(1.1);
+    transform: scale(0.95);
+    transition: all 0.4s;
+  }
+
+  &:hover .championCard_name {
+    background-color: white;
+    color: black;
+  }
+
+  &:hover .championCard_pic .hover-pic {
+    display: inline;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
