--- a/src/components/abilities/Ability.scss
+++ b/src/components/abilities/Ability.scss
@@ -26,3 +26,12 @@
     margin-bottom: 10px;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .championAbility {
+    &__detail img {
+      height: 50px;
+      width: 50px;
+    }
+  }
+}
