--- a/src/components/abilities/Ability.scss
+++ b/src/components/abilities/Ability.scss
@@ -29,6 +29,11 @@
 
 @media only screen and (max-width: 400px) {
   .championAbility {
+    &_passive img {
+      height: 50px;
+      width: 50px;
+    }
+
     &__detail img {
       height: 50px;
       width: 50px;
