--- a/src/components/views/EmptyList.scss
+++ b/src/components/views/EmptyList.scss
@@ -4,3 +4,10 @@
   margin-top: 350px;
   text-align: center;
 }
+
+@media only screen and (max-width: 400px) {
+  .emptyList {
+    font-size: 40px;
+    margin-top: 200px;
+  }
+}
