--- a/src/components/championDetail/ChampionDetail.scss
+++ b/src/components/championDetail/ChampionDetail.scss
@@ -2,9 +2,46 @@
   max-width: 1300px;
   margin: 10px auto;
   padding: 0 20px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
   &_name {
+    display: grid;
     text-align: center;
+    font-style: italic;
+    margin-bottom: 10px;
+
+    .title {
+      margin: 5px 0;
+      font-weight: bold;
+      font-size: 20px;
+    }
+
+    .firstname {
+      font-weight: bolder;
+      font-size: 70px;
+    }
+  }
+
+  &_info {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+
+    .role {
+      display: grid;
+      text-align: center;
+      gap: 5px;
+      margin: auto 0;
+    }
+
+    .line {
+      border-left: 1px solid rgba(128, 128, 128, 0.499);
+      height: 100px;
+    }
+
+    .lore {
+      margin: auto 0;
+    }
   }
 
   &_abilities {
@@ -18,5 +55,30 @@
   &_skins {
     display: flex;
     justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .champDetail {
+    &_info {
+      display: grid;
+
+      .role {
+        display: grid;
+        text-align: center;
+        margin: auto 0;
+      }
+
+      .line {
+        height: 0;
+        width: 50%;
+        margin: 0 auto;
+        border-bottom: 1px solid rgba(128, 128, 128, 0.499);
+      }
+
+      .lore {
+        text-align: center;
+      }
+    }
   }
 }
