--- a/src/components/championList/ChampionList.scss
+++ b/src/components/championList/ChampionList.scss
@@ -7,4 +7,15 @@
   flex-direction: row;
   max-width: 1200px;
   margin: 0 auto;
+  animation: fade-in 0.3s ease-in-out;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
