--- a/src/components/navBar/Navbar.scss
+++ b/src/components/navBar/Navbar.scss
@@ -71,6 +71,7 @@
 
       &-expanded ul {
         display: block;
+        animation: fade-in 0.3s ease-in-out;
       }
     }
 
@@ -82,5 +83,15 @@
     &_hamburger:hover {
       border-bottom: 2px solid white;
     }
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
