--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -16,7 +16,7 @@
 
     input:focus {
       outline: none;
-      border-bottom: 1px solid black;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.212);
     }
   }
 
@@ -40,7 +40,7 @@
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 670px) {
   .bar {
     &_search {
       .icon {
@@ -49,18 +49,10 @@
     }
     &_roles {
       div {
-        position: absolute;
-        top: 30px;
-        left: 0;
-        flex-direction: column;
-        width: 100%;
-        height: 30vh;
-        background-color: black;
-        color: white;
         display: none;
       }
 
-      &-expanded div {
+      &-expanded {
         display: block;
       }
     }
