--- a/src/components/spotlightVideo/SpotlightVideo.scss
+++ b/src/components/spotlightVideo/SpotlightVideo.scss
@@ -1,8 +1,7 @@
 .video-responsive {
   overflow: hidden;
-  padding-bottom: 43%;
   position: relative;
-  height: 0;
+  height: 50vh;
 }
 
 .video-responsive iframe {
