--- a/src/components/championDetail/ChampionDetail.scss
+++ b/src/components/championDetail/ChampionDetail.scss
@@ -72,7 +72,7 @@
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 390px) {
   .champDetail {
     &_info {
       display: grid;
@@ -95,6 +95,19 @@
       }
 
       border-bottom: 1px solid rgba(0, 0, 0, 0.177);
+    }
+
+    &_name {
+      .title {
+        margin: 5px 0;
+        font-weight: bold;
+        font-size: 15px;
+      }
+
+      .firstname {
+        font-weight: bolder;
+        font-size: 40px;
+      }
     }
 
     &_tips {
