--- a/src/components/championDetail/ChampionDetail.scss
+++ b/src/components/championDetail/ChampionDetail.scss
@@ -27,6 +27,7 @@
     gap: 10px;
     justify-content: space-between;
     padding-bottom: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.177);
 
     .role {
       display: grid;
