--- a/src/components/abilities/Ability.scss
+++ b/src/components/abilities/Ability.scss
@@ -1,8 +1,13 @@
 .championAbility {
   padding-bottom: 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.177);
 
-  &_passive div {
-    margin-bottom: 10px;
+  &_passive {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.177);
+
+    div {
+      margin-bottom: 10px;
+    }
   }
 
   &__list {
