--- a/src/components/skinList/ChampskinList.scss
+++ b/src/components/skinList/ChampskinList.scss
@@ -3,8 +3,11 @@
   justify-content: center;
   align-items: center;
 
+  min-height: 500px;
+
   & img {
     width: 100%;
+    height: 500px;
   }
 
   .skin-name {
@@ -36,4 +39,15 @@
   margin-top: 15px;
   padding: 10px;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 390px) {
+  .champSkinList {
+    min-height: 200px;
+
+    & img {
+      width: 100%;
+      height: 200px;
+    }
+  }
 }
