--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -12,11 +12,13 @@
 
     input {
       border: hidden;
+      border-right: 1px solid black;
     }
 
     input:focus {
       outline: none;
       border-bottom: 1px solid rgba(0, 0, 0, 0.212);
+      border-right: none;
     }
   }
 
