video changes again

--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -2,9 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
   padding: 10px 5%;
   margin: 20px 40px;
   border: 1px solid rgb(199, 193, 193);
+  background-color: white;
+  position: sticky;
+  top: 83px;
+  z-index: 1;
 
   &_search {
     display: flex;
