--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  overflow: hidden;
   padding: 10px 5%;
   margin: 20px 40px;
   border: 1px solid rgb(199, 193, 193);
@@ -45,6 +44,10 @@
 
 @media only screen and (max-width: 670px) {
   .bar {
+    position: sticky;
+    top: 68px;
+    z-index: 1;
+
     &_search {
       .icon {
         display: none;
