--- a/src/components/abilities/videoComponent/AbilityVideo.scss
+++ b/src/components/abilities/videoComponent/AbilityVideo.scss
@@ -2,12 +2,24 @@
   width: 90%;
   height: auto;
   margin-left: 10%;
+  padding: 0;
   border-radius: 20px;
+  animation: fadeInAnimation ease 2s;
 }
 
 @media only screen and (max-width: 480px) {
   .abilityVideo {
     width: 100%;
+    min-height: 250px;
     margin-left: 0px;
+  }
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
