--- a/src/components/skinList/ChampskinList.scss
+++ b/src/components/skinList/ChampskinList.scss
@@ -43,11 +43,11 @@
 
 @media only screen and (max-width: 480px) {
   .champSkinList {
-    min-height: 250px;
+    min-height: 213px;
 
     & img {
       width: 100%;
-      height: 250px;
+      height: auto;
     }
   }
 }
