--- a/src/screens/championProfile/ChampionProfile.scss
+++ b/src/screens/championProfile/ChampionProfile.scss
@@ -1,5 +1,7 @@
 .championProfile {
   animation: fadeInAnimation ease 1s;
+  background-color: black;
+  color: white;
 }
 
 @keyframes fadeInAnimation {
