--- a/src/components/championDetail/ChampionDetail.scss
+++ b/src/components/championDetail/ChampionDetail.scss
@@ -1,8 +1,8 @@
 .champDetail {
   max-width: 1300px;
-  margin: 10px auto;
+  margin: 0px auto;
   padding: 0 20px;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  // box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
   &_name {
     display: grid;
@@ -18,6 +18,7 @@
     fieldset {
       text-align: center;
       border: 1px solid rgba(151, 145, 145, 0.5);
+      margin-top: 15px;
     }
 
     legend {
@@ -27,12 +28,16 @@
     }
   }
 
+  &_video {
+    border: 2px solid white;
+  }
+
   &_info {
     display: flex;
     gap: 10px;
     justify-content: space-between;
     padding-bottom: 15px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.177);
+    border-bottom: 1px solid rgba(245, 238, 238, 0.177);
 
     .role {
       display: grid;
@@ -48,6 +53,7 @@
 
     .lore {
       margin: auto 0;
+      text-align: justify;
     }
   }
 
@@ -58,15 +64,11 @@
   &_abilitySet {
     display: flex;
   }
-
-  &_skins {
-    display: flex;
-    justify-content: center;
-  }
 }
 
 @media only screen and (max-width: 670px) {
   .champDetail {
+    text-align: justify;
     &_tips {
       display: none;
     }
@@ -91,11 +93,7 @@
         border-bottom: 1px solid rgba(128, 128, 128, 0.499);
       }
 
-      .lore {
-        text-align: center;
-      }
-
-      border-bottom: 1px solid rgba(0, 0, 0, 0.177);
+      border-bottom: 1px solid rgba(245, 238, 238, 0.177);
     }
 
     &_name {
