--- a/src/components/championDetail/ChampionDetail.scss
+++ b/src/components/championDetail/ChampionDetail.scss
@@ -2,7 +2,7 @@
   max-width: 1300px;
   margin: 0px auto;
   padding: 0 20px;
-  // box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: rgba(241, 238, 238, 0.19) 0px 10px 20px, rgba(241, 238, 238, 0.19) 0px 6px 6px;
 
   &_name {
     display: grid;
