--- a/src/components/skinList/ChampskinList.scss
+++ b/src/components/skinList/ChampskinList.scss
@@ -41,7 +41,18 @@
   cursor: pointer;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .champSkinList {
+    min-height: 220px;
+
+    & img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
   .champSkinList {
     min-height: 213px;
 
