--- a/src/screens/championProfile/ChampionProfile.scss
+++ b/src/screens/championProfile/ChampionProfile.scss
@@ -1,7 +1,6 @@
 .championProfile {
   animation: fadeInAnimation ease 1s;
-  background-color: #2d3436;
-  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);
+  background-color: #000000;
   color: white;
   z-index: 2;
 }
