--- a/src/components/championDetail/ChampionDetail.scss
+++ b/src/components/championDetail/ChampionDetail.scss
@@ -1,8 +1,12 @@
 .champDetail {
   max-width: 1300px;
-  margin: 0px auto;
+  margin: 10px auto;
   padding: 0 20px;
   box-shadow: rgba(241, 238, 238, 0.19) 0px 10px 20px, rgba(241, 238, 238, 0.19) 0px 6px 6px;
+
+  & > * {
+    margin: 0px 10px;
+  }
 
   &_name {
     display: grid;
