--- a/src/components/championCard/ChampionCard.scss
+++ b/src/components/championCard/ChampionCard.scss
@@ -1,9 +1,11 @@
 .championCard {
   position: relative;
   width: 170px;
+  min-height: 310px;
   margin: 2em;
   display: grid;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+  // box-shadow: rgba(252, 252, 252, 0.19) 0px 10px 20px, rgba(252, 252, 252, 0.19) 0px 6px 6px;
   transition: transform 0.6s;
 
   &_pic {
@@ -29,8 +31,9 @@
 
   &_name {
     text-align: center;
-    background-color: black;
-    color: white;
+    color: #937341;
+    border-top: 1px solid #937341;
+    padding: 10px;
   }
 
   & a {
@@ -40,11 +43,6 @@
   &:hover {
     transform: scale(0.95);
     transition: all 0.6s;
-  }
-
-  &:hover .championCard_name {
-    background-color: white;
-    color: black;
   }
 
   &:hover .championCard_pic .hover-pic {
