--- a/src/components/abilities/Ability.scss
+++ b/src/components/abilities/Ability.scss
@@ -79,9 +79,9 @@
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .championAbility {
     &_passive img {
-      height: 50px;
-      width: 50px;
-      margin-bottom: 5px;
+      min-height: 50px;
+      min-width: 50px;
+      margin-bottom: 15px;
     }
 
     &_fullSection {
@@ -115,8 +115,8 @@
     }
 
     &__detail img {
-      height: 50px;
-      width: 50px;
+      min-height: 50px;
+      min-width: 50px;
     }
   }
 }
