--- a/src/components/abilities/Ability.scss
+++ b/src/components/abilities/Ability.scss
@@ -78,6 +78,7 @@
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .championAbility {
+    font-size: 10px;
     &_passive img {
       min-height: 50px;
       min-width: 50px;
