--- a/src/components/championDetail/ChampionDetail.scss
+++ b/src/components/championDetail/ChampionDetail.scss
@@ -92,6 +92,7 @@
         display: grid;
         text-align: center;
         margin: auto 0;
+        font-size: 10px;
       }
 
       .line {
@@ -103,6 +104,8 @@
 
       .lore {
         padding-top: 5px;
+        font-size: 10px;
+        text-align: justify;
       }
 
       border-bottom: 1px solid rgba(245, 238, 238, 0.177);
