--- a/src/components/abilities/Ability.scss
+++ b/src/components/abilities/Ability.scss
@@ -6,8 +6,12 @@
     border-bottom: 1px solid rgba(245, 238, 238, 0.177);
 
     div {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
+  }
+
+  &_passiveName {
+    margin-top: 5px;
   }
 
   &_fullSection {
@@ -78,10 +82,11 @@
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .championAbility {
-    font-size: 10px;
+    font-size: 13px;
+
     &_passive img {
-      min-height: 50px;
-      min-width: 50px;
+      max-height: 40px;
+      max-width: 40px;
       margin-bottom: 15px;
     }
 
@@ -110,8 +115,8 @@
       justify-content: space-between;
       gap: 35px;
       img {
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
       }
     }
 
