--- a/src/components/championCard/ChampionCard.scss
+++ b/src/components/championCard/ChampionCard.scss
@@ -4,8 +4,7 @@
   min-height: 310px;
   margin: 2em;
   display: grid;
-
-  // box-shadow: rgba(252, 252, 252, 0.19) 0px 10px 20px, rgba(252, 252, 252, 0.19) 0px 6px 6px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   transition: transform 0.6s;
 
   &_pic {
@@ -31,9 +30,11 @@
 
   &_name {
     text-align: center;
-    color: #937341;
-    border-top: 1px solid #937341;
+    color: black;
+    text-transform: uppercase;
+    border: 1px solid #937341;
     padding: 10px;
+    background-color: rgba(225, 220, 220, 0.9);
   }
 
   & a {
